Fix sizing on mobile

--- a/client/src/components/Token/Token.module.css
+++ b/client/src/components/Token/Token.module.css
@@ -6,6 +6,6 @@
 }
 
 .token object, .token img {
-  width: 340px;
+  width: 100%;
   border-radius: 5px;
 }
